# MMStreamer

./: .clang-format  CMakeLists.txt  README.md
include/: MinMaxStreamer.hpp  Partition.hpp
src/: MinMaxStreamer.cpp  Partition.cpp  main.cpp
